<resources>
    <string name="app_name">Kazan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Стартап Казань</string>
    <string name="LogIn">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="NameAndFamily">Фамилия и Имя</string>
    <string name="Password">Пароль</string>
    <string name="Mail">Почта</string>
    <string name="RemindPassword"><u>Забыли пароль?</u></string>
    <string name="Role">Роль</string>
    <string name="events">Предстоящие события</string>
    <string name="startup">Стартапы</string>
    <string name="Investors">Инвесторы</string>
    <string name="Specialist">Специалисты</string>
    <string name="All">Все</string>
    <string name="Search">Поиск</string>
    <string name="About_event">О мероприятии</string>
    <string name="More">Узнать больше</string>
    <string name="Spikers">Спикеры</string>
    <string name="free">бесплатно</string>
    <string name="sign_up">записаться</string>
    <string name="AboutProgect">О проекте</string>
    <string name="Stage_investing">Стадия инвестирования</string>
    <string name="Need_sum">Необходимая сумма</string>
    <string name="Creator">Основатели</string>
    <string name="connect">Связаться</string>
    <string name="Resume"><u>Резюме</u></string>
    <string name="Portfolio"><u>Портфолио</u></string>
    <string name="About">О себе</string>
    <string name="Event">События</string>
    <string name="ok">Готово</string>
    <string name="Favorite">Избранное</string>
    <string name="History">История событий</string>
    <string name="State">Статьи</string>
    <string name="Course">Курсы</string>
    <string name="Message">Сообщения</string>
    <string name="send_anything">Напишите что-нибудь</string>
    <string-array name="spinner_role">
        <item>Специалист</item>
        <item>Стартапер</item>
        <item>Инвестор</item>
    </string-array>
</resources>