<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SpecialistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                tools:text="title" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/item_man">

            <ImageView
                android:id="@+id/face"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/man2" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                tools:text="@string/NameAndFamily" />

            <CheckBox
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/like_check"
                android:theme="@style/MyCheckBox" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Желаемая должность"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/dot_list" />

            <TextView
                android:id="@+id/speciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                tools:text="develop" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Опыт"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/Resume"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/portfolio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/Portfolio"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/About"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/info"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/About"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_green"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/connect"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>