<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainMenuFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/event"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/all_event"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/All"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                        <ImageView
                            android:src="@drawable/arrow_right"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:orientation="horizontal"
                android:id="@+id/pager_event"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:id="@+id/forInvestor"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startup"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/startup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/all_startup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/All"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                        <ImageView
                            android:src="@drawable/arrow_right"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:id="@+id/recycler_startup"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forStartap"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="20sp"
                        android:textColor="@color/textColor"
                        android:id="@+id/investors"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Investors"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:gravity="right"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/all_investor"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:text="@string/All"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14sp"
                                android:textColor="@color/green"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                            <ImageView
                                android:src="@drawable/arrow_right"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_marginTop="5dp"
                    android:id="@+id/pager_investors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="20sp"
                        android:textColor="@color/textColor"
                        android:id="@+id/specialist"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Specialist"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:gravity="right"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <LinearLayout
                            android:id="@+id/all_specialist"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:text="@string/All"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14sp"
                                android:textColor="@color/green"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                            <ImageView
                                android:src="@drawable/arrow_right"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_marginTop="5dp"
                    android:id="@+id/pager_specialist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>